# tenbox

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: build-initramfs.yml  build-rootfs.yml  pr-check.yml
docs/: agent-profile.md
installer/: license.rtf
scripts/: build-macos.sh  build-msi.bat  convert_icons.py  install-linux.sh  make-dmg.sh  make-rootfs-base-arm64.sh  make-rootfs-copaw.sh  publish.py
scripts/arm64/: get-kernel.sh  make-initramfs.sh  make-rootfs-base.sh  make-rootfs-chromium.sh  make-rootfs-copaw.sh  make-rootfs-hermes.sh  make-rootfs-openclaw.sh
scripts/ci/: update_images_json.py  upload_to_oss.py
scripts/docker/: Dockerfile  build.sh
scripts/rootfs-configs/: CoPaw.desktop  Help.desktop  OpenClaw.desktop  xfce4-panel.xml
scripts/rootfs-scripts/: tenbox-agent-backup  tenbox-agent-profile  virtiofs-automount
scripts/rootfs-services/: serial-getty-autologin.conf  tenbox-agent-backup.service  tenbox-agent-backup.timer  virtiofs-automount.service
scripts/x86_64/: get-kernel.sh  make-initramfs.sh  make-rootfs-base.sh  make-rootfs-chromium.sh  make-rootfs-copaw.sh  make-rootfs-hermes.sh  make-rootfs-openclaw.sh
src/common/: image_source.cpp  image_source.h
src/core/: CMakeLists.txt  README.md
src/core/arch/aarch64/: aarch64_machine.cpp  aarch64_machine.h  boot.cpp
src/core/arch/x86_64/: acpi.cpp  boot.cpp  x86_machine.cpp  x86_machine.h
src/core/device/acpi/: acpi_pm.cpp
src/core/device/serial/: uart_16550.cpp  uart_16550.h
src/core/device/timer/: i8254_pit.cpp
src/core/device/virtio/: virtio_blk.cpp  virtio_fs.cpp  virtio_mmio.cpp  virtio_mmio.h  virtio_snd.cpp  virtio_snd.h  virtqueue.cpp
src/core/disk/: qcow2.cpp  qcow2_check.cpp  raw_image.cpp
src/core/guest_agent/: guest_agent_handler.cpp
src/core/net/: net_backend.cpp  net_backend.h  net_nat.cpp
src/core/vmm/: address_space.cpp  console_tx_batcher.cpp  console_tx_batcher.h  hypervisor_vm.h  machine_model.h  types.h  vm.cpp  vm.h  vm_io_loop.cpp  vm_io_loop.h
src/daemon/: cloud_tunnel.cpp  ffmpeg_video_encoder.cpp  llm_proxy.cpp  remote_webrtc.cpp  rpc_server.cpp  runtime_manager.cpp
src/ipc/: ipc_transport.h  shared_framebuffer_posix.cpp
src/manager/: app.manifest  i18n.cpp  i18n.h  llm_proxy.cpp  main.cpp  manager_service.cpp  manager_service.h  resource.h  toolbar.rc
src/manager-macos/: Package.swift  TenBoxApp.swift
src/manager-macos/Audio/: CoreAudioPlayer.swift
src/manager-macos/Bridge/: IpcClientWrapper.swift  Models.swift  TenBoxBridgeWrapper.swift  VmConfigStore.swift  VmProcessManager.swift
src/manager-macos/Bridge/Sources/: TenBoxBridge.mm  TenBoxIPC.mm
src/manager-macos/Bridge/Sources/ipc/: shared_framebuffer_posix.cpp
src/manager-macos/Bridge/include/: TenBoxBridge.h
src/manager-macos/Clipboard/: ClipboardHandler.swift
src/manager-macos/Input/: InputHandler.swift  KeyboardCaptureManager.swift
src/manager-macos/Resources/: Info.plist  TenBox.entitlements
src/manager-macos/Services/: AgentToolsService.swift  ImageSourceService.swift  LlmProxyService.swift
src/manager-macos/Views/: AgentToolsView.swift  ContentView.swift  CreateVmDialog.swift  DisplayView.swift  MetalDisplayView.swift  VmDetailView.swift
src/manager/ui/: console_tab.h  create_vm_dialog.cpp  port_forward_dialog.cpp  settings_dialog.cpp  shared_folders_dialog.cpp  win32_display_panel.cpp  win32_display_panel.h  win32_ui_shell.cpp
src/platform/: CMakeLists.txt
src/platform/linux/: vm_platform_linux.cpp
src/platform/linux/hypervisor/: kvm_platform.cpp  kvm_platform.h
src/platform/linux/hypervisor/aarch64/: kvm_vcpu.cpp  kvm_vcpu.h  kvm_vm.cpp  kvm_vm.h
src/platform/linux/hypervisor/x86_64/: kvm_vcpu.cpp  kvm_vcpu.h  kvm_vm.cpp  kvm_vm.h
src/platform/macos/: vm_platform_macos.cpp
src/platform/macos/console/: posix_console_port.cpp  posix_console_port.h
src/platform/macos/hypervisor/aarch64/: hvf_mmio_decode.cpp  hvf_vcpu.cpp  hvf_vcpu.h  hvf_vm.cpp
src/platform/macos/hypervisor/x86_64/: hvf_vcpu.cpp  hvf_vm.cpp
src/platform/posix/console/: posix_console_port.cpp
src/platform/windows/console/: std_console_port.cpp  std_console_port.h
src/platform/windows/hypervisor/: whvp_doorbell.cpp  whvp_doorbell.h  whvp_vcpu.cpp  whvp_vm.cpp  whvp_vm.h
src/platform/windows/ipc/: shared_framebuffer_win32.cpp
src/runtime/: CMakeLists.txt  app.manifest  crash_handler.cpp  main.cpp  runtime_service.cpp
src/ui/common/: i18n.cpp  i18n.h
src/ui/win32/: CMakeLists.txt  create_vm_dialog.cpp  win32_dialogs.cpp  win32_ui_shell.cpp
src/ui/win32/dialogs/: port_forward_dialog.cpp  port_forward_dialog.h
tests/: test_qcow2.cpp
website/: README.md
website/public/api/: appcast.xml  images.json  sources.json  version.json
website/src/: App.vue
website/src/assets/styles/: main.css
website/src/components/: FooterSection.vue  HeroSection.vue  HowItWorks.vue  InstallSection.vue  NavBar.vue
website/src/i18n/: en-US.json  zh-CN.json
